# vantage-xoxo

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  STRUCTURE.md  ai-planner-complete-implementation-plan.md  context.md  docker-compose.yml  frontend-redesign-page-by-page-plan.md  full-workflow-validation-plan.md  issues.md  package-lock.json  planner-complete-remake-execution-plan.md  quality-improvement-playbook.md  run_local.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/agents/executor/: agent.py  calendar_sync.py  mock_calendar.py  reminders.py  status_tracker.py  worker.py
backend/agents/intake/: agent.py
backend/agents/planner/: agent.py  ai_advisor.py  availability.py  calibration.py  explainer.py  explainer_ai.py  habit_scheduler.py  macro_allocator.py  micro_scheduler.py  quality_scorer.py  replan.py  sweeper.py  worker.py
backend/agents/retriever/: agent.py  chunker.py  embeddings.py  estimator.py  extractor.py  knowledge_builder.py  review.py  web_supplement.py  worker.py
backend/api/: dependencies.py  main.py
backend/api/routers/: blocks.py  chat.py  constraints.py  embeddings.py  goals.py  plans.py  quiz.py  retriever.py  sync.py  telemetry.py  users.py
backend/scripts/: llm_test_insights.py  purge_live_data.py  run_full_validation.py
backend/shared/: config.py
backend/shared/ai/: __init__.py  llm.py
backend/shared/bus/: service_bus.py
backend/tests/: conftest.py  test_blocks.py  test_models.py  test_ryuk_live_e2e.py  test_workflow_full_integration.py  test_workflow_live_e2e.py
frontend/: .dockerignore  (+7 more)
(+78 files in other folders)
